[package]
name = "popup"
version = "0.1.0"
authors = ["Deadbeef"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.6"
yew = "0.19.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window"
]